# polyBEV_deploy

./: requirements.txt  srcnn3.engine  srcnn3.onnx  study_onnx2trt.py  study_pth2onnx.py
TensorRT/: CMakeLists.txt  CMakeLists.txt.x86
configs/bevformer/: custom-location.py
det2trt/convert/: pytorch2onnx.py
det2trt/models/dense_heads/: __init__.py  bevformer_head_loc.py
det2trt/models/detector/: __init__.py  bevformer_loc.py
det2trt/models/modules/: __init__.py  encoder_loc.py  seg_subnet_loc.py  spatial_cross_attention_loc.py  temporal_self_attention_loc.py  transformer_loc.py
docker/: Dockerfile
tools/bevformer/: evaluate_trt_location.py  onnx2trt.py
trt/: CMakeLists.txt  main.cpp
trt/include/: preprocess.h  utils.h
trt/src/: preprocess.cu
